csv punk añadidos

--- a/datos_spotify_Punk.ipynb
+++ b/datos_spotify_Punk.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fdfaf065",
    "metadata": {},
    "outputs": [],
@@ -253,10 +253,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cded1b28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   I Promised The World No encontrado.\n",
+      "  CNQR+ No encontrado.\n",
+      "1422\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'artista': 'Ghost Runner On Third',\n",
+       " 'biografia': 'A veteran of the local pop-punk scene, Tacoma’s own Ghost Runner On Third has been at it since 2002.\\n\\nAfter releasing its EP “Speak Your Dreams” in 2005, the quintet toured the West Coast. The band’s latest incarnation features Adam Fuller (vocals and keys) and Preston Kristof (bass), in addition to three original members, Colin Willard (guitar and backup vocals), Mike Johnson (guitar) and Ryan Polson (drums).\\n\\nThey\\'ve also had former members such as: <a href=\"https://www.last.fm/music/Ghost+Runner+On+Third\">Read more on Last.fm</a>',\n",
+       " 'Oyentes': 23224,\n",
+       " 'N_Reproducciones': 336544,\n",
+       " 'artistas_similares': [\"We're Not Friends Anymore\",\n",
+       "  'GunsLikeGirls',\n",
+       "  'Her Words Kill',\n",
+       "  'Dear Whoever',\n",
+       "  'Unwanted Superheroes']}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "info_artistas = obtener_info_artistas_lastfm(artistas, api_key)\n",
     "\n",
@@ -275,6 +303,529 @@
     "results\n",
     "artistas\n",
     "info_artistas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e38c4f90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "75ef6f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results = pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bbdb4b07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name_track</th>\n",
+       "      <th>name_artist</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>type</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Perfect Weapon</td>\n",
+       "      <td>Black Veil Brides</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Whore</td>\n",
+       "      <td>Get Scared</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>With Ears to See, and Eyes to Hear</td>\n",
+       "      <td>Sleeping With Sirens</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Whiskey and Gin</td>\n",
+       "      <td>The Killigans</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A New Today</td>\n",
+       "      <td>Endymion</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4012</th>\n",
+       "      <td>I like the way u talk to me</td>\n",
+       "      <td>NESYA</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4013</th>\n",
+       "      <td>angelonia</td>\n",
+       "      <td>grcz</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4014</th>\n",
+       "      <td>Softcrush</td>\n",
+       "      <td>CNQR+</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4015</th>\n",
+       "      <td>Fine</td>\n",
+       "      <td>Ductape</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4016</th>\n",
+       "      <td>Pegasus (Super Slowed)</td>\n",
+       "      <td>GERXMVP</td>\n",
+       "      <td>punk</td>\n",
+       "      <td>track</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4017 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              name_track           name_artist genre   type  \\\n",
+       "0                         Perfect Weapon     Black Veil Brides  punk  track   \n",
+       "1                                  Whore            Get Scared  punk  track   \n",
+       "2     With Ears to See, and Eyes to Hear  Sleeping With Sirens  punk  track   \n",
+       "3                        Whiskey and Gin         The Killigans  punk  track   \n",
+       "4                            A New Today              Endymion  punk  track   \n",
+       "...                                  ...                   ...   ...    ...   \n",
+       "4012         I like the way u talk to me                 NESYA  punk  track   \n",
+       "4013                           angelonia                  grcz  punk  track   \n",
+       "4014                           Softcrush                 CNQR+  punk  track   \n",
+       "4015                                Fine               Ductape  punk  track   \n",
+       "4016              Pegasus (Super Slowed)               GERXMVP  punk  track   \n",
+       "\n",
+       "      year  \n",
+       "0     2010  \n",
+       "1     2010  \n",
+       "2     2010  \n",
+       "3     2010  \n",
+       "4     2010  \n",
+       "...    ...  \n",
+       "4012  2025  \n",
+       "4013  2025  \n",
+       "4014  2025  \n",
+       "4015  2025  \n",
+       "4016  2025  \n",
+       "\n",
+       "[4017 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8c17cc49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results.to_csv(\"spotify_base_datos_final_punk.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "29f6cc4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_artistas = pd.DataFrame(artistas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cb0082e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ghost Runner On Third</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Meteors</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>He Said She's Dead</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kili</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Genesis Projection</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1419</th>\n",
+       "      <td>Down To Nothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1420</th>\n",
+       "      <td>Covet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421</th>\n",
+       "      <td>Feed Me Jack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1422</th>\n",
+       "      <td>SR-71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1423</th>\n",
+       "      <td>Bay Faction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1424 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           0\n",
+       "0      Ghost Runner On Third\n",
+       "1                The Meteors\n",
+       "2         He Said She's Dead\n",
+       "3                       Kili\n",
+       "4     The Genesis Projection\n",
+       "...                      ...\n",
+       "1419         Down To Nothing\n",
+       "1420                   Covet\n",
+       "1421            Feed Me Jack\n",
+       "1422                   SR-71\n",
+       "1423             Bay Faction\n",
+       "\n",
+       "[1424 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_artistas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "59701cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_artistas.to_csv(\"lastfm_unique_artist_punk.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "db55af71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_info_artistas = pd.DataFrame(info_artistas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7aedcad3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_info_artistas.to_csv(\"lastfm_unique_artist_punk.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fb4eb227",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artista</th>\n",
+       "      <th>biografia</th>\n",
+       "      <th>Oyentes</th>\n",
+       "      <th>N_Reproducciones</th>\n",
+       "      <th>artistas_similares</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ghost Runner On Third</td>\n",
+       "      <td>A veteran of the local pop-punk scene, Tacoma’...</td>\n",
+       "      <td>23224</td>\n",
+       "      <td>336544</td>\n",
+       "      <td>[We're Not Friends Anymore, GunsLikeGirls, Her...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Meteors</td>\n",
+       "      <td>There are at least 3 bands called The Meteors....</td>\n",
+       "      <td>179527</td>\n",
+       "      <td>3932362</td>\n",
+       "      <td>[Demented Are Go!, Batmobile, Nekromantix, Mad...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>He Said She's Dead</td>\n",
+       "      <td>He Said, She's Dead was born out of high schoo...</td>\n",
+       "      <td>5285</td>\n",
+       "      <td>69889</td>\n",
+       "      <td>[Forever Wings Fold, Reclaim The Fallen, Oh Sw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kili</td>\n",
+       "      <td>&lt;a href=\"https://www.last.fm/music/Kili\"&gt;Read...</td>\n",
+       "      <td>29441</td>\n",
+       "      <td>498244</td>\n",
+       "      <td>[Artie J, kwn, Pino, isaiah kaleo, kili, gabbinz]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Genesis Projection</td>\n",
+       "      <td>Sergio, after having passed few years playing ...</td>\n",
+       "      <td>3941</td>\n",
+       "      <td>34476</td>\n",
+       "      <td>[Tomcat &amp; Rudeboy, Raw Saints, Divato, Negativ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1417</th>\n",
+       "      <td>Down To Nothing</td>\n",
+       "      <td>Down to Nothing (or DTN) is a straight edge ha...</td>\n",
+       "      <td>83303</td>\n",
+       "      <td>4171289</td>\n",
+       "      <td>[Guns Up!, Backtrack, Bracewar, Cruel Hand, Ro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1418</th>\n",
+       "      <td>Covet</td>\n",
+       "      <td>There are two bands with the name covet:\\n\\nCo...</td>\n",
+       "      <td>195974</td>\n",
+       "      <td>4113182</td>\n",
+       "      <td>[Yvette Young, CHON, Floral, Clever Girl, Via ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1419</th>\n",
+       "      <td>Feed Me Jack</td>\n",
+       "      <td>Feed Me Jack were an Indie/Progressive Rock gr...</td>\n",
+       "      <td>132205</td>\n",
+       "      <td>2855285</td>\n",
+       "      <td>[Bobbing, Hikes, TTNG, Delta Sleep, Floral]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1420</th>\n",
+       "      <td>SR-71</td>\n",
+       "      <td>Formed in Baltimore, MD, United States in 1998...</td>\n",
+       "      <td>449980</td>\n",
+       "      <td>6562938</td>\n",
+       "      <td>[Sugarcult, American Hi-Fi, Bowling for Soup, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421</th>\n",
+       "      <td>Bay Faction</td>\n",
+       "      <td>Bay Faction were a three-piece indie rock band...</td>\n",
+       "      <td>165997</td>\n",
+       "      <td>3139436</td>\n",
+       "      <td>[It Looks Sad., Riley!, Remo Drive, Microwave,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1422 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     artista  \\\n",
+       "0      Ghost Runner On Third   \n",
+       "1                The Meteors   \n",
+       "2         He Said She's Dead   \n",
+       "3                       Kili   \n",
+       "4     The Genesis Projection   \n",
+       "...                      ...   \n",
+       "1417         Down To Nothing   \n",
+       "1418                   Covet   \n",
+       "1419            Feed Me Jack   \n",
+       "1420                   SR-71   \n",
+       "1421             Bay Faction   \n",
+       "\n",
+       "                                              biografia  Oyentes  \\\n",
+       "0     A veteran of the local pop-punk scene, Tacoma’...    23224   \n",
+       "1     There are at least 3 bands called The Meteors....   179527   \n",
+       "2     He Said, She's Dead was born out of high schoo...     5285   \n",
+       "3      <a href=\"https://www.last.fm/music/Kili\">Read...    29441   \n",
+       "4     Sergio, after having passed few years playing ...     3941   \n",
+       "...                                                 ...      ...   \n",
+       "1417  Down to Nothing (or DTN) is a straight edge ha...    83303   \n",
+       "1418  There are two bands with the name covet:\\n\\nCo...   195974   \n",
+       "1419  Feed Me Jack were an Indie/Progressive Rock gr...   132205   \n",
+       "1420  Formed in Baltimore, MD, United States in 1998...   449980   \n",
+       "1421  Bay Faction were a three-piece indie rock band...   165997   \n",
+       "\n",
+       "      N_Reproducciones                                 artistas_similares  \n",
+       "0               336544  [We're Not Friends Anymore, GunsLikeGirls, Her...  \n",
+       "1              3932362  [Demented Are Go!, Batmobile, Nekromantix, Mad...  \n",
+       "2                69889  [Forever Wings Fold, Reclaim The Fallen, Oh Sw...  \n",
+       "3               498244  [Artie J, kwn, Pino, isaiah kaleo, kili, gabbinz]  \n",
+       "4                34476  [Tomcat & Rudeboy, Raw Saints, Divato, Negativ...  \n",
+       "...                ...                                                ...  \n",
+       "1417           4171289  [Guns Up!, Backtrack, Bracewar, Cruel Hand, Ro...  \n",
+       "1418           4113182  [Yvette Young, CHON, Floral, Clever Girl, Via ...  \n",
+       "1419           2855285        [Bobbing, Hikes, TTNG, Delta Sleep, Floral]  \n",
+       "1420           6562938  [Sugarcult, American Hi-Fi, Bowling for Soup, ...  \n",
+       "1421           3139436  [It Looks Sad., Riley!, Remo Drive, Microwave,...  \n",
+       "\n",
+       "[1422 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_info_artistas"
    ]
   }
  ],
